# seaweed

./: .travis.yml  CHANGELOG.md  README.md  seaweed.cabal  stack.yaml
app/: Main.hs
src/: Seaweed.hs
src/Seaweed/: Cli.hs  Types.hs
