cabal-version:       2.4
name:                seaweed
version:             0.0.0
synopsis:            Create your fancy CV in different formats
description:         Create your fancy CV in different formats
homepage:            https://github.com/kowainik/seaweed
bug-reports:         https://github.com/kowainik/seaweed/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Kowainik
maintainer:          xrom.xkov@gmail.com
copyright:           2019 Kowainik
category:            CLI Tool
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.5

source-repository head
  type:                git
  location:            https://github.com/kowainik/seaweed.git

common common-options
  build-depends:       base-noprelude ^>= 4.12
                     , relude ^>= 0.5.0

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Prelude
                       Seaweed
                         Seaweed.Cli
                         Seaweed.Types
  autogen-modules:     Paths_seaweed
  other-modules:       Paths_seaweed

  build-depends:       gitrev ^>= 1.3
                     , optparse-applicative ^>= 0.15
                     , text ^>= 1.2
                     , time >= 1.8
                     , tomland ^>= 1.1.0.0

executable seaweed
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       seaweed

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite seaweed-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       seaweed

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
